<resources>
    <string name="app_name">Macys SD card Scanner</string>
    <string name="sd_card_scanner">SD Card Scanner</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="avg_size">Average size of files :</string>
    <string name="file_extension">Most file Extension</string>
    <string name="biggest_file">Biggest Files</string>
</resources>
