<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.venkat.macyssdcardscanner.MainActivity">

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/scan_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sd_card_scanner"
        android:layout_marginTop="80dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/start_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/scan_heading"
        android:text="@string/start_scan"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/stop_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/stop_scan"
        android:layout_below="@id/start_button"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
