<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/avg_size"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/avg_size"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/size"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_toRightOf="@+id/avg_size"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/biggest_files"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/biggest_file"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/avg_size"
        android:layout_marginTop="5dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/biggest_files_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/biggest_files"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/file_extensions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_extension"
        android:layout_below="@id/biggest_files_list"
        android:layout_marginLeft="20dp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/freq_extensions_list"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/file_extensions"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/share_button"
        android:layout_below="@+id/freq_extensions_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Share Results"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>